fix page jump scroll behavior

--- a/src/Navigation/Header/Header.scss
+++ b/src/Navigation/Header/Header.scss
@@ -64,7 +64,6 @@ a {
       .header-title {
         flex-shrink: 0;
         color: $primary-color;
-        overflow: hidden;
         font-weight: 600;
         font-size: 2em;
         font-family: "leo";
