--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,20 @@
   box-sizing: border-box;
 }
 
-body,
 html {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   overflow-y: scroll;
   background-color: #a67c00;
+  background-attachment: fixed; /* Fix the background */
   background-image: linear-gradient(
       135deg,
       rgba(255, 221, 50, 0.32) 25%,
